<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_magnify"
        android:iconifiedByDefault="true"
        android:orderInCategory="100"
        android:title="search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />
    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort_variant"
        android:iconifiedByDefault="true"
        android:orderInCategory="100"
        android:title="Sort"
        app:showAsAction="collapseActionView|ifRoom" >
        <menu>
            <item
                android:id="@+id/action_sort_alpha"

                android:iconifiedByDefault="true"
                android:orderInCategory="100"
                android:title="@string/sort_apha"
                app:showAsAction="collapseActionView|ifRoom" />
            <item
                android:id="@+id/action_sort_size"
                android:iconifiedByDefault="true"
                android:orderInCategory="100"
                android:title="@string/options3"
                app:showAsAction="collapseActionView|ifRoom" />

        </menu>

    </item>
    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/ic_android_debug_bridge"
        android:iconifiedByDefault="true"
        android:orderInCategory="100"
        android:title="Filter"
        app:showAsAction="collapseActionView|ifRoom">

        <menu>
            <item
                android:id="@+id/action_filter_all"

                android:iconifiedByDefault="true"
                android:orderInCategory="100"
                android:title="@string/filter_all"
                app:showAsAction="collapseActionView|ifRoom" />
            <item
                android:id="@+id/action_filter_user"

                android:iconifiedByDefault="true"
                android:orderInCategory="100"
                android:title="@string/filter_user"
                app:showAsAction="collapseActionView|ifRoom" />
            <item
                android:id="@+id/action_filter_system"
                android:iconifiedByDefault="true"
                android:orderInCategory="100"
                android:title="@string/filter_system"
                app:showAsAction="collapseActionView|ifRoom" />
        </menu>

    </item>
    <!--<item-->
        <!--android:id="@+id/action_menu"-->
      <!---->
        <!--android:iconifiedByDefault="true"-->
        <!--android:orderInCategory="100"-->
        <!--android:title="Menu"-->
        <!--app:showAsAction="collapseActionView">-->

        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/action_grid"-->

                <!--android:iconifiedByDefault="true"-->
                <!--android:orderInCategory="100"-->
                <!--android:title="Xem dạng lưới"-->
                <!--app:showAsAction="collapseActionView|ifRoom" />-->
            <!--<item-->
                <!--android:id="@+id/action_linner"-->

                <!--android:iconifiedByDefault="true"-->
                <!--android:orderInCategory="100"-->
                <!--android:title="Xem dạng danh sách"-->
                <!--app:showAsAction="collapseActionView|ifRoom" />-->
            <!--<item-->
                <!--android:id="@+id/action_about"-->
                <!--android:iconifiedByDefault="true"-->
                <!--android:orderInCategory="100"-->
                <!--android:title="Thông tin"-->
                <!--app:showAsAction="collapseActionView|ifRoom" />-->
        <!--</menu>-->

    <!--</item>-->
</menu>